--- a/Assignment_2 (1).ipynb
+++ b/Assignment_2 (1).ipynb
@@ -455,7 +455,7 @@
     "X = df_clean[features]\n",
     "y = df_clean['PE']\n",
     "\n",
-    "# Scale features (required for Q5)\n",
+    "# Scale features \n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
